tests/errors/type_property_of_undefined.js
let user = undefined;
let name = user.name;
